--- a/package.json
+++ b/package.json
@@ -34,10 +34,13 @@
     "conventional-changelog": "0.0.11",
     "del": "^1.1.0",
     "gulp": "^3.8.10",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-babel": "^6.1.2",
     "gulp-bump": "^0.3.1",
     "gulp-eslint": "^1.0.0",
     "gulp-pug": "^2.0.0",
+    "gulp-ruby-sass": "^2.0.6",
+    "gulp-sourcemaps": "^2.0.0-alpha",
     "gulp-yuidoc": "^0.1.2",
     "isparta": "^3.1.0",
     "istanbul": "^0.3.13",
