--- a/package.json
+++ b/package.json
@@ -57,7 +57,6 @@
     "yargs": "^2.1.1"
   },
   "jspm": {
-    "registry": "npm",
     "main": "index",
     "format": "amd",
     "directories": {
@@ -65,8 +64,8 @@
     },
     "dependencies": {
       "Eonasdan/bootstrap-datetimepicker": "github:Eonasdan/bootstrap-datetimepicker@^4.17.37",
-      "jquery": "^2.2.3",
-      "moment": "^2.13.0"
+      "jquery": "npm:jquery@^2.2.3",
+      "moment": "npm:moment@^2.13.0"
     },
     "devDependencies": {
       "aurelia-polyfills": "^1.0.0-beta.1.1.0"
