--- a/package.json
+++ b/package.json
@@ -63,15 +63,11 @@
       "dist": "dist/amd"
     },
     "dependencies": {
-      "moment": "npm:moment@^2.13.0",
       "Eonasdan/bootstrap-datetimepicker": "github:Eonasdan/bootstrap-datetimepicker@^4.17.37",
-      "jquery": "npm:jquery@^2.2.3"
+      "moment": "npm:moment@^2.13.0"
     },
     "devDependencies": {
-      "aurelia-polyfills": "^1.0.0-beta.1.1.0"
+      "aurelia-polyfills": "npm:aurelia-polyfills@^1.0.0-beta.1.1.0"
     }
-  },
-  "dependencies": {
-    "moment": "^2.13.0"
   }
 }
