--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "directories": {
       "dist": "dist/amd"
     },
-    peerDependencies: {
+    "peerDependencies": {
       "Eonasdan/bootstrap-datetimepicker": "github:Eonasdan/bootstrap-datetimepicker@^4.17.37",
       "moment": "npm:moment@^2.13.0"
     },
